# LLM-Microservice-Demo

./: .gitignore  Dockerfile  Dockerfile_GPU  LICENSE  README.md  docker-compose.yml  docker-compose_GPU.yml  pyproject.toml
app/: client_chat.py  client_chat_config.yaml  main.py
app/api/v1/: endpoints.py
app/core/: config.py  dependencies.py  general.py  schemas.py
docs/: api.rst  conf.py  index.rst  introduction.rst
k8s_deploy/: apply-k8-hpa-settings.sh  delete-k8-hpa-settings.sh  llm-k8-configmap.yaml  llm-k8-deploy.yaml  llm-k8-hpa.yaml  llm-k8-service.yaml
tests/integration/: __init__.py  test_chat_completion_endpoint.py  test_health_endpoint.py
tests/load/: locustfile.py
tests/unit/: test_client_chat.py  test_config_loader.py  test_dependencies.py  test_main.py  test_schema.py
